force-app/main/default/objects/Opportunity_Activity__c/Opportunity_Activity__c.object-meta.xml
<CustomObject>
    <label>Opportunity Activity</label>
    <nameField>
        <displayFormat>OA-{yymmdd}-{00000}</displayFormat>
        <label>Opportunity Activity No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>