force-app/main/default/objects/Opportunity_Activity__c/fields/BO_Code__c.field-meta.xml
<CustomField>
    <fullName>BO_Code__c</fullName>
    <formula>WhatId__r.OpportunityCode__c</formula>
    <label>BO Code</label>
    <type>Text</type>
</CustomField>