force-app/main/default/objects/Opportunity_Activity__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>완료 예정일자</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>