force-app/main/default/objects/Opportunity_Activity__c/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <label>Drop / Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CloseReason</valueSetName>
    </valueSet>
</CustomField>