force-app/main/default/objects/Opportunity_Activity__c/fields/LostType__c.field-meta.xml
<CustomField>
    <fullName>LostType__c</fullName>
    <label>Lost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z06</fullName>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Z07</fullName>
                <label>Drop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>