force-app/main/default/objects/Opportunity_Activity__c/fields/MigData__c.field-meta.xml
<CustomField>
    <fullName>MigData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MigData</label>
    <type>Checkbox</type>
</CustomField>