force-app/main/default/objects/Opportunity_Activity__c/fields/OpenITSM_SR_ID__c.field-meta.xml
<CustomField>
    <fullName>OpenITSM_SR_ID__c</fullName>
    <label>OpenITSM SR ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>