force-app/main/default/objects/Opportunity_Activity__c/fields/OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStage__c</fullName>
    <formula>TEXT(WhatId__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>