force-app/main/default/objects/Opportunity_Activity__c/fields/OpptyRecordType__c.field-meta.xml
<CustomField>
    <fullName>OpptyRecordType__c</fullName>
    <formula>WhatId__r.RecordType.DeveloperName</formula>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>