force-app/main/default/objects/Opportunity_Activity__c/fields/Proposal_Reg_Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Reg_Exception_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Proposal Reg. Exception Date</label>
    <type>Date</type>
</CustomField>