force-app/main/default/objects/Opportunity_Activity__c/fields/Proposal_Reg_Exception_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Reg_Exception_Reasons__c</fullName>
    <label>Proposal Reg. Exception Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>