force-app/main/default/objects/Opportunity_Activity__c/fields/Proposal_Reg_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Reg_Exception_Type__c</fullName>
    <label>Proposal Reg. Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple delivery</fullName>
            </value>
            <value>
                <fullName>Confidentiality</fullName>
            </value>
            <value>
                <fullName>Extension contract</fullName>
            </value>
            <value>
                <fullName>Etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>