force-app/main/default/objects/Opportunity_Activity__c/validationRules/Check_StartDate_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_StartDate_EndDate</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( CONTAINS($User.Username, &apos;if_user&apos;)
, false
, StartDate__c &gt; EndDate__c)</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Start date cannot be greater than the end date.</errorMessage>
</ValidationRule>