force-app/main/default/objects/Opportunity_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>WhatId__c</columns>
    <columns>TransactionName__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>